[sc-44120] Stop image to overflow over hr

--- a/packages/portal-style/src/modules/_content-style.scss
+++ b/packages/portal-style/src/modules/_content-style.scss
@@ -259,6 +259,7 @@
 }
 
 .dp-po-post-content hr {
+  clear: both;
   margin: 0.75em 0;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
